# myBee

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  client  client2.c  doxgen.conf  index.html  params.json  servidor  servidor.c  servidor2.c
ProjAbelha/: .classpath  .project
ProjAbelha/res/layout/: activity_main.xml
ProjAbelha/res/values/: strings.xml
config/: db.conf  dbname.sql
dadosApiario/dia28-outubro/: data.csv  octave-workspace  script  temperatureDescritive~
dadosApiario/dia28-outubro/Humidity/: humidityDescritive  humidityDescritive~
dadosApiario/dia28-outubro/rasp1/: dataRasp1  humidity  humidity2  humidity2~  temperature  temperature2  temperature2~
dadosApiario/dia28-outubro/rasp10/: dataRasp10  humidity  humidity2  temperature  temperature2
dadosApiario/dia28-outubro/rasp2/: dataRasp2  humidity  humidity2  temperature  temperature2
dadosApiario/dia28-outubro/rasp3/: dataRasp3  humidity  humidity2  temperature  temperature2  temperature2~
dadosApiario/dia28-outubro/rasp5/: dataRasp5  humidity  humidity2  temperature  temperature2  temperature2~
dadosApiario/dia28-outubro/rasp6/: dataRasp6  humidity  humidity2  temperature  temperature2  temperature2~
dadosApiario/dia28-outubro/rasp7/: dataRasp7  humidity  humidity2  temperature  temperature2
dadosApiario/dia28-outubro/rasp8/: dataRasp8  humidity  humidity2  temperature  temperature2  temperature2~
dadosApiario/dia28-outubro/rasp9/: dataRasp9  humidity  humidity2  temperature  temperature2
database/: dataDAO.c  db.conf  dbname.sql
docs/html/: KCentroid_8h_source.html  Krls_8h_source.html  ManipulateData_8h_source.html  Node_8h_source.html  annotated.html  classClientMonitor.html  classData.html  classKCentroid.html  classKrls.html  classManipulateData.html  classNode.html  classRepaAPI.html  classServerMonitor.html  classes.html  classmessage.html  client__monitor_8hpp_source.html  dataDAO_8hpp_source.html  data_8hpp_source.html  dir_1a3961d8c902fff6800b8096e16a16a9.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7ee80c99c7d57c7be0eb760c429fbee0.html  dir_8742ad48431365f40157400197e9e6c7.html  dir_a1ee7300ca116b96c2a0a0f6ff840a5c.html  dir_a9e912434c9b7336d2c270114c4d5118.html  dir_d5532f1e0bdaff18401d233540a07721.html  files.html  hierarchy.html  index.html  limit_8h_source.html  machineLearning_8h_source.html  machineLearning_8hpp_source.html  message_8hpp_source.html  repa__api_8hpp_source.html  repa__api_8tpp_source.html  server__monitor_8hpp_source.html
examples/: Makefile  server  server.cpp
examples/arduino/: Makefile  client.cpp
examples/generic/: clientgeneric.cpp  commands.sh  generic.h  servergeneric  servergeneric.cpp
examples/generic/automation/: app.js  package.json
examples/generic/automation/routes/: getStatus.js  toggleTv.js
examples/piface/: dht11.py
examples/random/: Makefile  client.cpp  clientrandom  server.cpp
examples/raspberry/: Makefile  client  client.cpp
examples/raspberry/lib/: dht11.cpp  dht11.hpp
examples/simuladorFazenda/: Makefile  client.cpp  hum_abelhas.txt  temp_abelhas.txt
include/: .dataDAO.h.swp  dataDAO.h
repa/: README  setup.py
repa/example/: chat  chat.c  chat.py  servidor
repa/lib/: python_lib-repa.c
repa/util/: linkedlist.c  util.c
repd/: License.txt  repad_armv6l  repad_x86  repad_x86_64  repd-x86  repd-x86_64
repd/hdr/: repa.h
script/linux/: adhoc-mode.sh  coletar_dados.sh
script/windows/: setip.cmd
src/: client.c  client.cpp  client2.c  server.c  server.cpp  servidor2.c  tags
src/Android/: .project
src/database/: dataDAO.c  dataDAO.cpp  dbname.sql
src/include/: data.hpp  dataDAO.h  dataDAO.hpp  machineLearning.h
src/machineLearning/: KCentroid.cpp  Krls.cpp  Makefile  ManipulateData.cpp  Rvm.cpp  kcentroid.cpp  krls_ex.cpp  limit.cpp  machineLearning.cpp  rvm_estimate.cpp
src/machineLearning/dlib/: README.txt  revision.h
src/machineLearning/include/: KCentroid.h  Krls.h  ManipulateData.h  Node.h  Rvm.h  kcentroid.h  limit.h
src/monitorAPI/: CMakeLists.txt  Makefile  clientExample.cpp  client_example.cpp  client_monitor.cpp  client_monitor.hpp  data.hpp  server_monitor.cpp  server_monitor.hpp
src/monitorAPI/database/: Makefile  dataDAO.cpp  dataDAO.hpp  dbname.sql
src/monitorAPI/include/: KCentroid.h  Krls.h  ManipulateData.h  Node.h  clientMonitor.hpp  clientMonitor.tpp  client_monitor.hpp  client_monitor.tpp  data.hpp  dataDAO.hpp  limit.h  machineLearning.h  server_monitor.hpp
src/monitorAPI/machineLearning/: CMakeLists.txt  KCentroid.cpp  KCentroid.hpp  Krls.cpp  Krls.hpp  Makefile  ManipulateData.cpp  ManipulateData.hpp  Node.hpp  limit.cpp  limit.hpp  machineLearning.cpp  machineLearning.hpp
src/monitorAPI/machineLearning/include/: Krls.h  ManipulateData.h  limit.h
src/monitorAPI/repa/: Makefile  PKG-INFO  setup.py
src/monitorAPI/repa/hdr/: hashmap.c  hashmap.h  linkedlist.c  repa-header.h  repa.h  util.c  util.h
src/monitorAPI/repa/lib/: lib-repa.c  python_lib-repa.c
src/monitorAPI/repa/util/: hashmap.c  linkedlist.c
src/monitorAPI/repaAPI/include/: message.hpp  repa_api.hpp  repa_api.tpp
src/repa/: LICENSE  PKG-INFO  README  servidor2.c  setup.py
src/repa/example/: Makefile  servidor.c
src/repa/hdr/: linkedlist.h  repa.h  util.h
src/repa/lib/: lib-repa.c  python_lib-repa.c
src/repa/util/: util.c
src/repaAPI/: LICENSE  Makefile  README.md  repaAPI.cpp
src/repaAPI/include/: message.hpp  repaAPI.hpp  repaAPI.tpp  repa_api.hpp  repa_api.tpp
src/web-UI/: app.js  engine.js  getDados  getHistorico  index.html  package.json
src/web-UI/CGI/: getDados.c  getHistorico.c
src/web-UI/lang/: statusMsgPT.json
src/web-UI/routes/: deleteData.js  exportData.js  exportData.js~  getDados.js  getHistoric.js  getNodes.js
src/web-UI/views/: exportData.ejs  exportData.ejs~  exportDataPDF.ejs  getDados.ejs  getHistoric.ejs  getNodes.ejs  index.ejs  layout.ejs
tests/: Makefile
tests/machineLearning/: machineLearning.cpp
web-UI/: engine.js  getDados  index.html  style.css
web-UI/CGI/: dataDAO.c  dataDAO.c~  getDados.c  getDados.c~
(+33 files in other folders)
